<resources>
    <string name="app_name">clickerTwo</string>
    <string name="play">Play</string>
    <string name="top">Top list</string>
    <string name="settings">Settings</string>
    <string name="register">Sing in</string>
    <string name="login">Log in</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_pass">Enter your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="life">Life</string>
    <string name="points">Points</string>
    <string name="rang">Rang</string>
    <string name="logout">Log out</string>
    <string name="editName">Edit name</string>
    <string name="chooseLang">Choose language</string>
    <string name="save">Save</string>
    <string name="video_watch">Watch a video for new live</string>
    <string name="clickmake">You can’t see how many clicks you did</string>
    <string name="needscl">Need click is</string>
    <string name="yourcl">Your click is</string>
    <string name="timer">Timer</string>
    <string name="clhere">Click here</string>
    <string name="ukr">Ukrainian</string>
    <string name="eng">English</string>
    <string name="restart">Restart</string>
    <string name="menu">Menu</string>
    <string name="leftTime">Left time to recover life</string>
    <string name="name">Name</string>
</resources>