<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen.Personality.SettingsActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_back"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editName"
        android:fontFamily="@font/comfortaa"
        android:textSize="22dp"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_person" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:fontFamily="@font/comfortaa"
            android:text="Name"
            android:textColor="@color/black"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/editName"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="22dp" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="100dp"
        android:background="@drawable/nfo_btn"
        android:text="@string/save"
        android:layout_marginBottom="50dp"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseLang"
            android:fontFamily="@font/comfortaa"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/lEnglish"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/eng"
                    android:fontFamily="@font/comfortaa"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lUkraine"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginHorizontal="20dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ukr"
                    android:fontFamily="@font/comfortaa"
                    android:textSize="16dp"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>