<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen.FirstScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/btn_play"
            android:foregroundTint="#C54D4D"
            android:outlineSpotShadowColor="@color/black"
            app:cardBackgroundColor="#C32626"
            app:cardCornerRadius="15dp"
            app:cardElevation="3dp"
            android:layout_margin="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingHorizontal="30dp"
                android:paddingVertical="10dp"
                android:text="@string/play"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="26dp" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/orange"
                android:foregroundTint="#C54D4D"
                android:outlineSpotShadowColor="@color/black"
                app:cardBackgroundColor="#C32626"
                app:cardCornerRadius="15dp"
                app:cardElevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/top"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22dp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="15dp"
                android:backgroundTint="@color/orange"
                android:foregroundTint="#C54D4D"
                android:outlineSpotShadowColor="@color/black"
                app:cardBackgroundColor="#C32626"
                app:cardCornerRadius="15dp"
                app:cardElevation="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="22dp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>