<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/bg_bottom_sheet_win"
    android:elevation="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="You lose"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:fontFamily="@font/comfortaa"
            android:letterSpacing="0.05"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/needscl"
                    android:textColor="@color/black"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/need_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/comfortaa"
                    android:gravity="right"
                    android:text="40"
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/comfortaa"
                    android:text="@string/yourcl"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/your_click"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/comfortaa"
                    android:gravity="right"
                    android:text="."
                    android:textColor="@color/black"
                    android:textSize="24dp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_restart"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:text="@string/restart"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:fontFamily="@font/comfortaa"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_menu"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_margin="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu"
                    android:padding="20dp"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    android:fontFamily="@font/comfortaa"
                    android:layout_gravity="center"/>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>


</FrameLayout>