<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screen.Personality.RegisterActivity"
    android:gravity="left"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back"/>

    <TextView
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:lineSpacingExtra="20sp"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="15dp"
        android:layout_marginVertical="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/nfo_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:id="@+id/text_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_name"
                        android:textColor="@color/black"
                        android:textColorHint="#877B7B"/>

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/nfo_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_email"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:id="@+id/text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:textColor="@color/black"
                        android:textColorHint="#877B7B"
                        android:inputType="textEmailAddress"/>

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/nfo_btn"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_key"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"/>

                    <EditText
                        android:id="@+id/text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_pass"
                        android:textColor="@color/black"
                        android:textColorHint="#877B7B"
                        android:inputType="textPassword"/>

                </LinearLayout>

            </RelativeLayout>


        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/register"
        android:textAlignment="center"
        android:textSize="22sp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"/>

</LinearLayout>