<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screen.FragmentScreen.ProfileFragment"
    android:background="#6AE3F2FD"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/circles" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="60dp"
                android:gravity="center"
                android:padding="5dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/comfortaa"
                    android:gravity="center"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="24dp" />

                <LinearLayout
                    android:layout_below="@+id/text_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/starr"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginHorizontal="10dp"
                        android:src="@drawable/star" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/comfortaa"
                        android:text="@string/points"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/count_point"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_name"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="20dp"
                    android:fontFamily="@font/comfortaa"
                    android:text="50"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_sett"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            app:cardCornerRadius="15dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_settings"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="18dp"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/black"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="20dp"
            app:cardCornerRadius="15dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="10dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_logout"
                    android:layout_marginHorizontal="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:layout_marginHorizontal="10dp"
                    android:textSize="18dp"
                    android:fontFamily="@font/comfortaa"
                    android:textColor="@color/black"/>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</LinearLayout>